# python-st3215

./: MEMORY_TABLE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: compile.yml  release.yml  type-check.yml
examples/: 01_scan_servos.py  03_read_position.py  07_temperature_monitor.py  09_registered_write.py  14_change_id.py  16_sync_read.py  17_sync_write.py  18_network_port.py
src/python_st3215/: __init__.py  decorators.py  errors.py  registers.py  servo.py  st3215.py
